chama trust app version 23 with syncronizing data to firebase as well as downloading to local database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ChamaBuddy</string>
+    <string name="app_name">ChamaTrust</string>
 
 
         <string name="create_new_cycle">Create New Cycle</string>
